faq+team pages accessibility improvements

--- a/faq.html
+++ b/faq.html
@@ -116,9 +116,7 @@
     <section class="hero flex jc-sb">
       <div class="hero__text flex flex-col gap--lg">
         <h1>
-          Frequently Asked <emphasis class="text--blue">Questions</emphasis>
-
-          <img class="hero__img-faq" src="images/illustrations/question-marks.svg" alt="Question Mark Icons">
+          Frequently Asked <emphasis class="hero__img-anchor text--blue">Questions</emphasis>
         </h1>
         <div class="flex flex-col gap--sm">
           <h3>Learn more about Digital Shovel</h3>
