--- a/team.html
+++ b/team.html
@@ -140,7 +140,7 @@
         <h5 class="team__title">Corporate</h5>
         <ul class="team__list flex flex-col gap--md">
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <img class="icon--lg" src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Scot Johnson</h6>
               <small>CEO & President</small>
@@ -149,7 +149,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/persia.png" alt="Headshot Photograph of Persia Khodarahmi">
+            <img class="icon--lg" src="images/photos/team/persia.png" alt="Headshot Photograph of Persia Khodarahmi">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Persia Khodarahmi</h6>
               <small>Operations Manager</small>
@@ -158,7 +158,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Scot Johnson">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Scot Johnson">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Manesha Persaud</h6>
               <small>Talent Acquisition Coordinator</small>
@@ -167,7 +167,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Scot Johnson">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Scot Johnson">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Kai Jiang</h6>
               <small>Logistics Coordinator</small>
@@ -176,7 +176,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Scot Johnson">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Scot Johnson">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Elisha Porras</h6>
               <small>Administrative Assistant</small>
@@ -277,7 +277,7 @@
         <h5 class="team__title">Engineering</h5>
         <ul class="team__list flex flex-col gap--md">
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Ben de Vos">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Ben de Vos">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Ben de Vos</h6>
               <small>Electronics Designer & Team Leader</small>
@@ -286,7 +286,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Hugo Rodrigues">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Hugo Rodrigues">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Hugo Rodrigues</h6>
               <small>Electronics Designer</small>
@@ -295,7 +295,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Noah Chuyu Zhou">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Noah Chuyu Zhou">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Noah Chuyu Zhou</h6>
               <small>Electronics Designer</small>
@@ -304,7 +304,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Prasanth Shunmugam">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Prasanth Shunmugam">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Prasanth Shunmugam</h6>
               <small>Manufacturing / Design Engineer</small>
@@ -313,7 +313,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Hyeseong Choi">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Hyeseong Choi">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Hyeseong Choi</h6>
               <small>Robotics Engineer</small>
@@ -322,7 +322,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Milu Abraham">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Milu Abraham">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Milu Abraham</h6>
               <small>Embedded Systems Engineer</small>
@@ -331,7 +331,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Vahid Mahmoodi">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Vahid Mahmoodi">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Vahid Mahmoodi</h6>
               <small>FEA / CFD Engineer</small>
@@ -340,7 +340,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Milan Patel">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Milan Patel">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Milan Patel</h6>
               <small>Mechanical Design Engineer</small>
@@ -349,7 +349,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Mark Kamukama">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Mark Kamukama">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Mark Kamukama</h6>
               <small>Mechanical Design Engineer</small>
@@ -395,7 +395,7 @@
         <h5 class="team__title team__title--add-line">Design & Development</h5>
         <ul class="team__list flex flex-col gap--md">
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Nicholas Panayotakos">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Nicholas Panayotakos">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Nicholas Panayotakos</h6>
               <small>UI / UX Design & Frontend Developer</small>
@@ -428,7 +428,7 @@
         <h5 class="team__title">Product Team Leaders</h5>
         <ul class="team__list flex flex-col gap--md">
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Vishal Monpara">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Vishal Monpara">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Vishal Monpara</h6>
               <small>PDU Team Leader</small>
@@ -437,7 +437,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Amanpreet Singh">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Amanpreet Singh">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Amanpreet Singh</h6>
               <small>Assembly Team Leader</small>
@@ -446,7 +446,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Tirlochan Singh">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Tirlochan Singh">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Tirlochan Singh</h6>
               <small>Switchgear Team Leader</small>
@@ -455,7 +455,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Deepak Sharma">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Deepak Sharma">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Deepak Sharma</h6>
               <small>Evening Shop Supervisor</small>
@@ -464,7 +464,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Austin Cairns">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Austin Cairns">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Austin Cairns</h6>
               <small>Welding Supervisor</small>
@@ -473,7 +473,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Brian MacLean">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Brian MacLean">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Brian MacLean</h6>
               <small>Shop Supervisor</small>
@@ -482,7 +482,7 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Andy Igneczi">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Andy Igneczi">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Andy Igneczi</h6>
               <small>Shipping & Inventory Supervisor</small>
@@ -604,13 +604,13 @@
     </section>
 
     <section class="gallery container">
-      <article class="gallery__grid">
-        <img src="images/photos/team-1.jpg" alt="Photo of Digital Shovel Team Event">
-        <img src="images/photos/team-2.jpg" alt="Photo of Digital Shovel Team Event">
-        <img src="images/photos/team-3.jpg" alt="Photo of Digital Shovel Team Event">
-        <img src="images/photos/team-6.jpg" alt="Photo of Digital Shovel Team Event">
-        <img src="images/photos/team-7.jpg" alt="Photo of Digital Shovel Team Event">
-        <img src="images/photos/team-10.jpg" alt="Photo of Digital Shovel Team Event">
+      <article class="gallery__grid mbot--xxl">
+        <img class="photo--lg" src="images/photos/team-1.jpg" alt="Photo of Digital Shovel Team Event">
+        <img class="photo--lg" src="images/photos/team-2.jpg" alt="Photo of Digital Shovel Team Event">
+        <img class="photo--lg" src="images/photos/team-3.jpg" alt="Photo of Digital Shovel Team Event">
+        <img class="photo--lg" src="images/photos/team-6.jpg" alt="Photo of Digital Shovel Team Event">
+        <img class="photo--lg" src="images/photos/team-7.jpg" alt="Photo of Digital Shovel Team Event">
+        <img class="photo--lg" src="images/photos/team-10.jpg" alt="Photo of Digital Shovel Team Event">
       </article>
 
       <article class="gallery__cta flex flex-col ai-c gap--md">
