--- a/team.html
+++ b/team.html
@@ -41,18 +41,17 @@
       </a>
 
       <ul class="navbar__links">
-        <ul class="dropdown">
-          <li class="dropdown__title">Products
+        <li class="dropdown">
+          <span class="dropdown__title">Products
             <svg class="dropdown__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
               xmlns="http://www.w3.org/2000/svg">
-              <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" />
+              <path d="M2.5 1L7.95455 6L2.5 11" />
             </svg>
-          </li>
+          </span>
           <ul class="dropdown__menu">
             <li>
               <a class="dropdown__link" href="products-minipod.html">
-                <img src="images/icons/icon_minipod.svg" alt="Minipod Icon">
+                <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
                   <h5>Minipod Container
                     <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -69,7 +68,7 @@
             </li>
             <li>
               <a class="dropdown__link" href="#">
-                <img src="images/icons/icon_power-supply.svg" alt="Minipod Icon">
+                <img class="icon--md" src="images/icons/icon_power-supply.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
                   <h5>Power Supply
                     <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -85,7 +84,7 @@
               </a>
             </li>
           </ul>
-        </ul>
+        </li>
         <li><a class="navbar__link" href="team.html">Team</a></li>
         <li><a class="navbar__link" href="merch.html">Merch</a></li>
         <li><a class="navbar__link" href="faq.html">Faq</a></li>
@@ -102,10 +101,10 @@
         </svg>
       </a>
 
-      <a class="navbar__hamburger" href="">
+      <a class="navbar__hamburger">
         <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M18 9H4" stroke="var(--cool-gray-400)" stroke-width="2" stroke-linecap="round" />
-          <path d="M18 13H4" stroke="var(--cool-gray-400)" stroke-width="2" stroke-linecap="round" />
+          <path d="M18 9H4" />
+          <path d="M18 13H4" />
         </svg>
       </a>
     </nav>
